--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<html>
-  <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
-    <script src="pendel.js"></script>
-  </head>
-  <body>
-    <main>
-    </main>
-  </body>
-</html>
+{% extends "bootstrap/base.html" %}
+{% block title %} Steering behaviour {% endblock title %}
+
+{% block head %}
+{{ super() }}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.js"></script>
+<script src={{ url_for('send_static', path='pendel.js') }}></script>
+{% endblock head %}
